<resources>
    <string name="app_name">Represent!</string>
    <string name="zipCodeOption">Enter a ZIP Code</string>
    <string name="streetAddressHint">Street Address</string>
    <string name="cityHint">City</string>
    <string name="stateHint">State</string>
    <string name="zipCodeHint">ZIP Code</string>
    <string name="noLocationQuestion">No particular location in mind?</string>
    <string name="randomizeLocation"><u>Randomize Location</u></string>
    <string name="welcomeQuestion">Where would you like to view the representatives?</string>
    <string name="GeolocationBaseUrl">https://maps.googleapis.com/maps/api/geocode/</string>
    <string name="api_key">AIzaSyAFjzXkERgRaPB2jIqzUDEt8PUvJJkmCZE</string>
    <string name="loading">Loading</string>
    <string name="submit">Use Current Location</string>
    <string name="searchIconTag">search</string>
    <string name="myLocationIconTag">myLocation</string>
    <string name="phone">phone</string>
    <string name="website">website</string>
    <string name="twitter">twitter</string>
    <string name="youtube">youtube</string>
    <string name="locationOutsideUS">Location must be within the borders of the U.S.</string>
    <string name="invalidLocation">Invalid Location</string>
    <string name="randomIconTag">randomLocation</string>
    <string name="representatives">Representatives</string>
    <string name="polling_locations">Polling Locations</string>
    <string name="drop_off_locations">Drop-Off Locations</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
</resources>
