<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/repToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/randomLocationBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_dice"
            android:layout_marginEnd="8dp"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:tag="@string/randomIconTag"/>

        <ImageButton
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_black_24dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:tag="@string/searchIconTag" />

        <ImageButton
            android:id="@+id/myLocationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_my_location_black_24dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:tag="@string/myLocationIconTag" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/MerriweatherTitleText"
            android:text="Address"
            android:layout_marginEnd="72dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"></TextView>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/toolbarBottomDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/repToolbar"
        android:background="@color/colorDividerColor">
    </View>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbarBottomDivider"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/representatives"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/polling_locations"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drop_off_locations"/>
    </com.google.android.material.tabs.TabLayout>
    
    <FrameLayout
        android:id="@+id/election_info_fragment_ctr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>