<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/streetLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:theme="@style/OutlinedTextInputLayout"
        app:boxStrokeColor="@color/text_input_layout_outline"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/streetAddressTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto"
            android:hint="@string/streetAddressHint">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cityLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:theme="@style/OutlinedTextInputLayout"
        app:boxStrokeColor="@color/text_input_layout_outline"
        app:layout_constraintTop_toBottomOf="@id/streetLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cityAddressTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cityHint">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stateLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cityLayout"
        app:layout_constraintEnd_toStartOf="@id/zipCodeLayout"
        android:theme="@style/OutlinedTextInputLayout"
        app:boxStrokeColor="@color/text_input_layout_outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/stateAddressTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/stateHint">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/zipCodeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stateLayout"
        app:layout_constraintTop_toBottomOf="@id/cityLayout"
        android:theme="@style/OutlinedTextInputLayout"
        app:boxStrokeColor="@color/text_input_layout_outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/zipCodeAddressTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/zipCodeHint">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>