<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/repToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MerriweatherTitleText"
            android:text="Representatives"
            android:textColor="@android:color/black"
            android:textSize="24sp"></TextView>

        <ImageButton
            android:id="@+id/randomLocationBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_dice"
            android:layout_marginEnd="8dp"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:tag="@string/randomIconTag"/>

        <ImageButton
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_black_24dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:tag="@string/searchIconTag" />

        <ImageButton
            android:id="@+id/myLocationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_my_location_black_24dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:tag="@string/myLocationIconTag" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/toolbarBottomDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/repToolbar"
        android:background="@color/colorDividerColor">
    </View>

    <TextView
        android:id="@+id/addressTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarBottomDivider"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:gravity="center"
        android:text="Address"
        android:textSize="18dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/representativesRv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/addressTv"
        app:layout_constraintBottom_toBottomOf="parent">
    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>